# prodigy-ann

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: unit_tests.yml
prodigy_ann/: __init__.py  image.py  text.py  util.py
tests/: e2e_util.py  test_basics.py  test_e2e.py  test_image_basics.py  test_text_basics.py
tests/datasets/: new-dataset.index
