[metadata]
version = 0.2.0
description = Recipes for approximate nearest neighbord search
url = https://github.com/explosion/prodigy-ann
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.8
install_requires =
    sentence-transformers==2.2.2
    hnswlib==0.7.0
    Pillow==10.1.0

[options.entry_points]
prodigy_recipes =
    ann.text.index = prodigy_ann:text_index
    ann.text.fetch = prodigy_ann:text_fetch
    textcat.ann.manual = prodigy_ann:textcat_ann_manual
    ner.ann.manual = prodigy_ann:ner_ann_manual
    spans.ann.manual = prodigy_ann:spans_ann_manual
    ann.image.index = prodigy_ann:image_index
    ann.image.fetch = prodigy_ann:image_fetch
    image.ann.manual = prodigy_ann:image_ann_manual

[bdist_wheel]
universal = true

[sdist]
formats = gztar
